# nftmarketplace

./: .travis.yml  README.md  netlify.toml  notes.txt  package-lock.json  package.json
contract/: Cargo.toml
contract/src/: cep47.rs  data.rs  entry_points.rs  event.rs  lib.rs  main.rs
contract/src/contract_utils/: admin_control.rs  contract_context.rs  mod.rs
contract/src/test_env/: mod.rs  test_contract.rs  test_env.rs  utils.rs
cors-server/: README.md  package-lock.json  package.json
deploy-scripts/: .env.example  deployInitNFTs.ts  getDeployDetails.ts  install.ts  package-lock.json  package.json  utils.ts
frontend/: .env.sample  .gitignore  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  colors.css  core.css  index.css  index.tsx
frontend/src/api/: contractInfo.ts  explorer.ts  imageCDN.ts  mint.ts  miscFeatures.ts  nftInfo.ts  oldCore.ts  universal.ts  userInfo.ts
frontend/src/components/NFT/: nftcontainer.tsx
frontend/src/components/core/: CoreButton.tsx  CoreTextField.tsx  LinkifyDecorator.tsx  NFTCard.tsx  NFTInfoModal.tsx  NFTList.tsx  PromptLogin.tsx
frontend/src/constants/: THEMES.ts  blockchain.ts  paymentAmounts.ts  server.ts
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/lib/: cep47.ts
frontend/src/pages/: dash.tsx  home.tsx  mint.tsx  nft.tsx  profile.tsx
frontend/src/utils/: calculations.ts  contract-utils.ts  globals.ts  log.ts  parsers.ts  signer.ts  ux.ts
server/: .gitignore  package-lock.json  package.json
server/src/: db.js  server.js
(+11 files in other folders)
